[package]
name = "bugs-checker"
version = "0.2.0"
authors = ["funkill2 <funkill2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.8"
clap = "2.33"
anyhow = "1.0"
common = { path = "../common" }
regex = "1.4"
once_cell = "1.11"
log = "0.4"
