[package]
name = "bugs-checker"
version = "0.2.0"
authors = ["funkill2 <funkill2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9"
clap = "3.2"
anyhow = "1.0"
common = { path = "../common" }
regex = "1.4"
once_cell = "1.7"
log = "0.4"
