[package]
name = "common"
version = "0.1.0"
authors = ["funkill2 <funkill2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
git2 = "0.13"
hubcaps = { version = "0.6", optional = true }
json = "0.12"
log = "0.4"
pretty_env_logger = "0.4"

[features]
default = []
github-api = ["hubcaps"]
