[package]
name = "sym-counter"
version = "0.1.0"
authors = ["funkill2 <funkill2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
common = { path = "../common", features = ["github-api"] }
tokio = { version = "1.2", features = ["full"] }
